deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: python-app
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: python-app
    spec:
        containers:
           - image: 909216379109.dkr.ecr.us-east-1.amazonaws.com/privaterepository-1
             imagePullPolicy: Always
             name: python-app
             ports:
             - containerPort: 8080   
---
apiVersion: v1
kind: Service
metadata:
  name: python-ser
  namespace: dev
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: python-app
